# pixel-parlament

./: AGENTS.md  LICENSE  start_all.ps1  stop_all.ps1
backend/: mock_broadcast.py  pixel_parlament.db  pyproject.toml  seed_data.py  test_admin.py  verify.py  verify_orchestrator.py
backend/app/: main.py
backend/app/api/: websocket.py
backend/app/core/: config.py  llm.py
backend/app/core/skills/: registry.py  tools.py
backend/app/db/: models.py
backend/app/orchestrator/: graph.py  nodes.py  state.py
backend/app/services/: soul_manager.py
backend/souls/agent_1/: soul.md
backend/souls/agent_2/: soul.md
backend/souls/agent_3/: soul.md
backend/souls/agent_4/: soul.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/components/: AgentSprite.tsx  LiveTerminal.tsx  OfficeCanvas.tsx
