[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.136.1",
    "langchain-core>=1.3.2",
    "langgraph>=1.1.9",
    "litellm>=1.83.14",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.14.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
    "websockets>=16.0",
]
